@@ -7,9 +7,9 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-# 
+#
 #   http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -19,7 +19,11 @@
 #
 
 import sys
-from qpid.messaging import *
+
+try:
+  from qpid_messaging import *
+except:
+  from qpid.messaging import *
 
 broker =  "localhost:5672"
 connection = Connection(broker)
@@ -41,11 +45,11 @@ try:
 
   address = """
     xml; {
-       create: always, 
-       node:{ type: queue }, 
-       link: { 
+       create: always,
+       node:{ type: queue },
+       link: {
          x-bindings: [{ exchange: xml, key: weather, arguments: { xquery: %r} }] 
-       } 
+       }
     }
     """ % query
 
